--- a/detalhes.html
+++ b/detalhes.html
@@ -102,7 +102,7 @@
 </div>
  </div>
                     <div class="col-md-6">
-                        <div class="small mb-1">SKU: BST-${id}</div>
+                        <div class="small mb-1">SKU: BST-${element.id}</div>
                         <h1 class="display-5 fw-bolder">${element.nome}</h1>
                         <div class="fs-5 mb-5">
                             <span>${element.preco}</span>
