--- a/detalhes.html
+++ b/detalhes.html
@@ -109,10 +109,10 @@
                         </div>
                         <p class="lead">${element.desclonga}</p>
                         <div class="d-flex">
-                           <button class="btn btn-outline-success flex-shrink-0" type="button">
+                           <a href="whatsapp://send?phone=49985053106" class="btn btn-outline-success flex-shrink-0">
                                 <i class="bi bi-whatsapp me-1"></i>
                                 Comprar
-                            </button>
+                            </a>
                         </div>
                     </div>
                 </div>
