--- a/detalhes.html
+++ b/detalhes.html
@@ -109,7 +109,7 @@
                         </div>
                         <p class="lead">${element.desclonga}</p>
                         <div class="d-flex">
-                           <a href="whatsapp://send?phone=+5549984328976&text=Olá" class="btn btn-outline-success flex-shrink-0">
+                           <a href="https://api.whatsapp.com/send??phone=+5549984328976&text=Olá" class="btn btn-outline-success flex-shrink-0">
                                 <i class="bi bi-whatsapp me-1"></i>
                                 Comprar
                             </a>
