--- a/index.html
+++ b/index.html
@@ -183,5 +183,13 @@
 				}
 				teste();
 			</script>
+            <script async src="https://www.googletagmanager.com/gtag/js?id=G-PGR15YZBZK"></script>
+            <script>
+              window.dataLayer = window.dataLayer || [];
+              function gtag(){dataLayer.push(arguments);}
+              gtag('js', new Date());
+            
+              gtag('config', 'G-PGR15YZBZK');
+            </script>
     </body>
 </html>
