ajustes de layout

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     </div>
                 </div>
                 <div clas="right">
-                    <img src = "assets/cart.svg" alt="cart"/>
+                    <img src = "assets/cart.svg" height="100" alt="cart"/>
                 </div>
                 
             </div>
@@ -90,7 +90,7 @@
                                 </div>
                             </div>
                             `
-							document.getElementById("agenda2").innerHTML+= html;
+							document.getElementById("itens").innerHTML+= html;
 							
 						}	
                 }
